# umockdev-rs

./: .gitmodules  Cargo.toml  LICENSE-LGPLv2.1-gir  README.md
gir-files-umockdev/: UMockdev-1.0.gir  update.sh
umockdev/: Cargo.toml  Gir.toml
umockdev/src/: lib.rs
umockdev/src/auto/: enums.rs  ioctl_base.rs  ioctl_client.rs  ioctl_data.rs  mod.rs  testbed.rs  versions.txt
umockdev/sys/: Cargo.toml  Gir.toml  build.rs
umockdev/sys/src/: lib.rs
umockdev/sys/tests/: abi.rs  constant.c  layout.c  manual.h
